@@ -2,6 +2,8 @@ Version 1.116 (???)
 - replace Pointer by CGAL_COMPARABLE_ITERATOR_CHECKER( *) for 
   Vertex_handle and Cell_handle in TDS
 - Remove src/Triangulation_3.C .
+- Remove deprecated functions incident_vertices() and indicent_cells()
+  taking std::set & as argument.
 
 Version 1.115 (29 May 02)
 - Replace max2 by maxless.
